# rust_web_app

./: Cargo.toml  readme.md
backend/: Cargo.toml  testdb.sqlite3
backend/src/db/: mod.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
