[package]
name = "rust_web_app"
version = "0.1.0"
authors = ["ClarityAcuity <zonapha1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["backend", "frontend"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
