[package]
name = "backend"
version = "0.1.0"
authors = ["ClarityAcuity <zonapha1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_web_app = { path = ".." }
diesel = { version = "1.4.4", features = ["sqlite"] }
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
rocket_cors = { version = "0.5.2", default-features = false }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
