[package]
name = "frontend"
version = "0.1.0"
authors = ["ClarityAcuity <zonapha1988@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rust_web_app = { path = ".." }
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
futures = "^0.3.4"
